<resources>
    <string name="app_name">Talky_Project</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="join">회원가입</string>
    <string name="emiil">이메일</string>
    <string name="passwd">비밀번호</string>
    <string name="nickname">닉네임</string>
    <string name="name">이름</string>
    <string name="id">아이디</string>
    <string name="passwdCheck">비밀번호 확인</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="password_reset">비밀번호 변경</string>
    <string name="password_reset_by_email">비밀번호 변경 이메일 보내기</string>
    <string name="phoneNumber">전화번호</string>
    <string name="birthday">생년월일</string>
    <string name="address">주소</string>
    <string name="member_info">회원정보</string>
    <string name="check">확인</string>
    <string name="writing">글쓰기</string>
    <string name="title">제목</string>
    <string name="please_writing">내용을 적어주세요.</string>
    <string name="write">쓰기</string>
    <string name="member">회원정보</string>
    <string name="search">검색</string>
    <string name="home">HOME</string>
    <string name="please_title_or_writing">제목이나 내용을 입력해주세요.</string>
    <string name="writeComment">댓글쓰기</string>
    <string name="comment">댓글</string>
    <string name="please_comment">댓글을 작성해주세요.</string>
    <string name="write_post">글 쓰기</string>
    <string name="my_writing">나의 글</string>
    <string name="hot">HOT</string>
    <string name="post">게시글</string>
</resources>