<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFABE"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|end"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:scaleX="1.8"
            android:scaleY="1.8"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <TextView
            android:id="@+id/commentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/writeComment"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <EditText
        android:id="@+id/commentEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/please_comment"
        android:inputType="textMultiLine"
        android:lines="10" />

    <Button
        android:id="@+id/writeCommentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write" />
</LinearLayout>